--- a/.github/workflows/flux-diff.yaml
+++ b/.github/workflows/flux-diff.yaml
@@ -19,8 +19,13 @@ jobs:
       pull-requests: write
     strategy:
       matrix:
-        paths: ["kubernetes"]
-        resources: ["helmrelease", "kustomization"]
+        include:
+          - name: HelmRelease
+            path: kubernetes
+            resource: helmrelease
+          - name: Kustomization
+            path: kubernetes
+            resource: kustomization
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -37,10 +42,10 @@ jobs:
         uses: docker://ghcr.io/allenporter/flux-local:main
         with:
           args: >-
-            diff ${{ matrix.resources }}
+            diff ${{ matrix.resource }}
             --unified 6
-            --path /github/workspace/pull/${{ matrix.paths }}
-            --path-orig /github/workspace/default/${{ matrix.paths }}
+            --path /github/workspace/pull/${{ matrix.path }}
+            --path-orig /github/workspace/default/${{ matrix.path }}
             --strip-attrs "helm.sh/chart,checksum/config,app.kubernetes.io/version,chart"
             --limit-bytes 10000
             --all-namespaces
@@ -59,9 +64,15 @@ jobs:
         name: Add comment
         uses: mshick/add-pr-comment@v2
         with:
-          message-id: "${{ github.event.pull_request.number }}/${{ matrix.paths }}/${{ matrix.resources }}"
+          message-id: "${{ github.event.pull_request.number }}/${{ matrix.path }}/${{ matrix.resource }}"
           message-failure: Diff was not successful
           message: |
+            ## ${{ matrix.name }} Diff
+
+            <details>
+              <summary>Click to expand</summary>
+
             ```diff
             ${{ steps.diff.outputs.diff }}
             ```
+            </details>
